make pre text more visible and fix two practice problems

--- a/static/css/practice.css
+++ b/static/css/practice.css
@@ -17,7 +17,14 @@ pre {
   overflow: auto;
 }
 
+.solution-pre {
+  font-weight: 700;
+  color: #444;
+}
+
 .output-pre {
+  font-weight: 700;
+  color: #444;
   max-height: 150px;
 }
 
